--- a/EXTORSIA_WEBS/css/style.css
+++ b/EXTORSIA_WEBS/css/style.css
@@ -180,7 +180,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background: url('/Users/alex/Documents/EXTORSIA_WEBS/image/banniere1.jpg');
+    background: url('../image/banniere1.jpg');
     background-size: cover;
     padding: 40px;
 }
