--- a/EXTORSIA_WEBS/css/style.css
+++ b/EXTORSIA_WEBS/css/style.css
@@ -183,7 +183,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background: url('../image/banniere1.jpg');
+    background: url('../image/DOWNLOAD4.jpg');
     background-size: cover;
     padding: 40px;
 }
