--- a/EXTORSIA_WEBS/stylenav2.css
+++ b/EXTORSIA_WEBS/stylenav2.css
@@ -4,7 +4,7 @@ nav{
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    border-bottom: 5px solid grey;
+    border-bottom: 5px solid rgb(49, 9, 9);
     background-color: #986990;
 
 
