--- a/EXTORSIA_WEBS/css/team.css
+++ b/EXTORSIA_WEBS/css/team.css
@@ -201,7 +201,7 @@ footer{
     margin: -9%;   
     margin-top: 40px;
     border-top: 5px solid grey;
-    background-color: #ce568a;
+    background-color: #F7B0CF;
     padding : 30px 100px;
 }
 
@@ -253,3 +253,5 @@ h2.encadrer{
     text-align:center;
     border-radius: 20px;
 }
+
+
